testdata/good/before/2.with-inserts.tw
@use("layouts/title-and-content")

@insert("title", "Home page")

@insert("content")
<h1>Home page</h1>
<p>Some content</p>
@end