testdata/bad/unknown-default-provide/index.tw
@component("book", { title: "Harry Potter" })
    @provide
        <p>Some content is here</p>
    @end
@end